# ingres_chatbot

./: .env  .gitignore  CMakeLists.txt  DEPLOYMENT_GUIDE.md  DOCKER_K8S_DEPLOYMENT.md  Dockerfile  Makefile  README.md  VERCEL_DEPLOYMENT.md  database_setup.sql  demo_script.md  deploy_k8s.sh  deploy_now.sh  deploy_vercel.sh  docker-compose.yml  package.json  populate_database.sql  server.js  vercel.json
api/: auth.js  capabilities.js  chat.js  status.js  websocket.js
data/: sample_groundwater_data.c
include/: chatbot.h  database.h  utils.h
k8s/: deployment.yaml  postgres.yaml  secrets.yaml
src/: api.c  chatbot.c  database.c  enhanced_intent_patterns.c  enhanced_response_generator.c  main.c  test_suite.c  utils.c
web/: index.html  package.json  script.js  style.css
web/public/: index.html
web/src/: AceternityLogo.tsx  App.css  App.tsx  FloatingActionButton.css  FloatingActionButton.tsx  HoverBorderGradient.css  HoverBorderGradient.tsx  ParticleBackground.css  ParticleBackground.tsx  Shuffle.css  Shuffle.tsx
